--- a/src/main/webapp/static/css/hackermenHMS.css
+++ b/src/main/webapp/static/css/hackermenHMS.css
@@ -12,6 +12,11 @@
 	overflow: auto;
 }
 
+.nav {
+	font-size: 16px;
+	font-weight: bold;
+}
+
 .dataManagement {
 	background-color: rgb(250, 250, 250);
 }
@@ -30,4 +35,23 @@
 
 .searchBar {
 	margin-bottom: 70px;
+}
+
+#logoutNav {
+	position: absolute;
+	color: red;
+	right: 30px;
+	width: 10%;
+	text-align: center;
+	background-color: rgb(232, 238, 248);
+}
+
+.registerForm {
+	width: 70%;
+	border-radius: 10px;
+	align-items: center;
+	border: solid 1px rgb(231, 231, 231);
+	align-items: center;
+	border: solid 1px rgb(231, 231, 231);
+	padding: 2% 5%;
 }
