--- a/src/main/webapp/WEB-INF/views/navBarManage.jspf
+++ b/src/main/webapp/WEB-INF/views/navBarManage.jspf
@@ -2,22 +2,17 @@
 <div class="navBarUsers">
 	<nav class="navbar navbar-light">
 		<ul class="nav navbar-nav">
-			<li class="dataManagement dataNav1"><a
-				href="${pageContext.request.contextPath}/userManagement/customer">Manage
-					Users</a></li>
 			<li class="userNav1"><a
-				href="${pageContext.request.contextPath}/userManagement/customer">Manage
-					Users: Customers</a></li>
+				href="${pageContext.request.contextPath}/userManagement/customer">Manage Customers</a></li>
 			<li class="userNav2"><a
-				href="${pageContext.request.contextPath}/userManagement/staff">Manage
-					Users: Staff</a></li>
-
-			<li class="dataManagement dataNav2"><a>Manage Rooms
-					(und.dev.)</a></li>
+				href="${pageContext.request.contextPath}/userManagement/staff">Manage Staff</a></li>
+			<li class="roomNav1"><a
+				href="${pageContext.request.contextPath}/roomManagement/room">Manage Rooms</a></li>
+			<li class="roomNav2"><a
+				href="${pageContext.request.contextPath}/roomManagement/roomType">Manage Room Types</a></li>
 			<li class="dataManagement dataNav3"><a>Manage Facilities
 					(und.dev.)</a></li>
-			<li class="dataManagement dataNav4"><a>Manage Amenities
-					(und.dev.)</a></li>
+
 		</ul>
 	</nav>
 </div>
