--- a/src/main/webapp/static/css/hackermenHMS.css
+++ b/src/main/webapp/static/css/hackermenHMS.css
@@ -21,12 +21,8 @@
 	background-color: rgb(250, 250, 250);
 }
 
-.userNavActive {
-	box-shadow: inset 0px 0px 0px 1px rgb(214, 225, 242);
-}
-
 .subNavActive {
-	background-color: rgb(214, 225, 242);
+	box-shadow: inset 0px 0px 0px 1px rgb(214, 225, 242);
 }
 
 .navbar-default {
@@ -55,3 +51,11 @@
 	border: solid 1px rgb(231, 231, 231);
 	padding: 2% 5%;
 }
+
+.checkboxItems {
+	margin-right: 15px;
+	margin-left: 3px;
+	margin-top: 10px;
+}
+
+
