--- a/src/main/webapp/static/css/hackermenHMS.css
+++ b/src/main/webapp/static/css/hackermenHMS.css
@@ -53,9 +53,11 @@
 }
 
 .checkboxItems {
-	margin-right: 15px;
-	margin-left: 3px;
+	margin-right: 10px;
 	margin-top: 10px;
+}
+input[type="checkbox"] {
+	margin-right:5px;
 }
 
 
