--- a/src/main/webapp/static/css/hackermenHMS.css
+++ b/src/main/webapp/static/css/hackermenHMS.css
@@ -55,46 +55,59 @@
 .checkboxItems {
 	margin-right: 10px;
 	margin-top: 10px;
-	
 }
+
 .checkboxGroup {
-	display:flex;
-	overflow:auto;
-	float:clear;
-	vertical-align:center;
-	
+	display: flex;
+	overflow: auto;
+	float: clear;
+	vertical-align: center;
 }
 
 input[type="checkbox"] {
-	margin-right:5px;
+	margin-right: 5px;
 }
 
 td {
-	text-align:center;
+	text-align: center;
 }
 
 .availRooms {
-
-	color:dodgerblue;
+	color: dodgerblue;
 	font-size: 18px;
-
 }
 
 .bookRooms {
-
-	color:dodgerblue;
+	color: dodgerblue;
 	font-size: 18px;
-
 }
 
-#roomType > div.form-group.searchButtons {
-	text-align:center;
-	width: 70%;
-	margin-right:10px !important;
-	margin-left:10px !important;
-}
-.searchButtons {
-	display:flex;
-	overflow:auto;
+#roomType>div.form-group.searchButtons {
 	text-align: center;
+	width: 70%;
+	margin-right: 10px !important;
+	margin-left: 10px !important;
+}
+
+.searchButtons {
+	display: flex;
+	overflow: auto;
+	text-align: center;
+}
+
+.booking-form{
+	background-color: rgb(250, 250, 250);
+	border: solid 1px rgb(231, 231, 231);
+	margin: 5px;
+	padding: 30px;
+}
+
+.room-confirmation{
+	float: right;
+}
+
+
+.cover {
+    background-image: url("static/images/booking.png");
+    
 }
