--- a/src/main/webapp/WEB-INF/views/imports.jspf
+++ b/src/main/webapp/WEB-INF/views/imports.jspf
@@ -3,7 +3,7 @@
 <link href="<c:url value="/static/css/bootstrap.min.css" />"
 	rel="stylesheet">
 
-<script src="<c:url value="/static/js/bootstrap.min.js" />"></script>
+<script src="<c:url value="/static/js/bootstrap.js" />"></script>
 
 <script src="<c:url value="/static/js/searchFilters.js" />"></script>
 
