--- a/src/main/webapp/WEB-INF/views/imports.jspf
+++ b/src/main/webapp/WEB-INF/views/imports.jspf
@@ -1,9 +1,9 @@
 <script src="<c:url value="/static/js/jquery-3.5.1.min.js" />"></script>
 
-<link href="<c:url value="/static/css/bootstrap.min.css" />"
+<link href="<c:url value="/static/css/bootstrap.css" />"
 	rel="stylesheet">
 
-<script src="<c:url value="/static/js/bootstrap.js" />"></script>
+<script src="<c:url value="/static/js/bootstrap.min.js" />"></script>
 
 <script src="<c:url value="/static/js/searchFilters.js" />"></script>
 
