Changed color and font weight of the Jquery dialog title

--- a/src/main/webapp/static/css/hackermenHMS.css
+++ b/src/main/webapp/static/css/hackermenHMS.css
@@ -115,6 +115,11 @@ div.ui-dialog {
 	display: none;
 }
 
+.ui-dialog-titlebar {
+	background:rgb(231, 231, 231);
+	font-weight:bold;
+}
+
 div.ui-dialog-content {
 	padding: 10px 0;
 	text-align: center;
