--- a/src/main/webapp/WEB-INF/views/navBarManage.jspf
+++ b/src/main/webapp/WEB-INF/views/navBarManage.jspf
@@ -17,8 +17,8 @@
 			<li class="roomNav3"><a
 				href="${pageContext.request.contextPath}/bookingManagement/bookings">Manage
 					Bookings</a></li>
-			<li class="dataManagement dataNav3"><a>Manage Facilities
-					(und.dev.)</a></li>
+			<li class="dataManagement dataNav3"><a>Manage Facilities</a></li>
+			<li class="dataManagement dataNav3"><a href="${pageContext.request.contextPath}/facilityBookingManagement">Manage Facility Bookings</a></li> 
 
 		</ul>
 	</nav>
