Made final improvements to facility booking logic. Booking now considers both capacity and dates, and implement a logic of single booking per time slot for Meeting Rooms and, for restaurants, checks the sum of bookings on a given time against the restaurants total capacity

--- a/src/main/webapp/WEB-INF/views/navBarManage.jspf
+++ b/src/main/webapp/WEB-INF/views/navBarManage.jspf
@@ -17,10 +17,10 @@
 			<li class="roomNav3"><a
 				href="${pageContext.request.contextPath}/bookingManagement/bookings">Manage
 					Bookings</a></li>
-			<li class="roomNav4"><a
+			<li class="facilityNav1"><a
 				href="${pageContext.request.contextPath}/facilitiesManagement">Manage
 					Facilities</a></li>
-			<li class="roomNav5"><a href="${pageContext.request.contextPath}/facilityBookingManagement">Manage Facility Bookings</a></li> 
+			<li class="facilityNav2"><a href="${pageContext.request.contextPath}/facilityBookingManagement">Manage Facility Bookings</a></li> 
 
 		</ul>
 	</nav>
